date property added (mm/dd/year)

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </head>
 
 <body>
-  <date-chip></date-chip>
+  <date-chip date = "03/10/2023"></date-chip>
 
   <script type="module" src="./src/date-chip.js"></script>
 </body>
